--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.817.0",
+    "@aws-sdk/s3-request-presigner": "^3.817.0",
     "@google-cloud/storage": "^7.16.0",
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "^4.0.2",
@@ -38,6 +40,7 @@
     "class-validator": "0.14.1",
     "dotenv": "16.4.7",
     "fs-extra": "^11.3.0",
+    "multer": "^2.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "0.2.0",
@@ -49,6 +52,7 @@
     "@nestjs/schematics": "10.0.0",
     "@nestjs/testing": "10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.2",
     "@types/multer": "^1.4.12",
