feat: docker files

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://laith:password@localhost:9876/teletech_db?schema=public"
+DATABASE_URL="postgresql://express:8ab32e55850daff4da8284c6224ff72a@postgres:5432/express_db"
