--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teletech",
+  "name": "radiant-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -39,6 +39,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dotenv": "16.4.7",
+    "express": "^5.1.0",
     "fs-extra": "^11.3.0",
     "multer": "^2.0.0",
     "passport": "^0.7.0",
