--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "seed": "ts-node src/seeder/seed-brands-models.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -38,6 +39,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "csv-parser": "^3.2.0",
     "dotenv": "16.4.7",
     "express": "^5.1.0",
     "fs-extra": "^11.3.0",
