--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ services:
   postgres:
     image: postgres:15-alpine
     ports:
-      - '9876:5432'
+      - '5432:5432'
     environment:
       - POSTGRES_USER=express
-      - POSTGRES_PASSWORD=password@123
+      - POSTGRES_PASSWORD=8ab32e55850daff4da8284c6224ff72a
       - POSTGRES_DB=express_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - app-network
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U Teletech_user -d teletech_db']
+      test: ['CMD-SHELL', 'pg_isready -U express -d express_db']
       interval: 5s
       timeout: 5s
       retries: 5
