--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-s3": "^3.817.0",
     "@aws-sdk/s3-request-presigner": "^3.817.0",
     "@google-cloud/storage": "^7.16.0",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "10.0.0",
@@ -35,6 +36,7 @@
     "@types/aws-sdk": "^2.7.4",
     "@types/fs-extra": "^11.0.4",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "0.5.1",
