--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,20 @@
-DATABASE_URL="postgresql://express:8ab32e55850daff4da8284c6224ff72a@postgres:5432/express_db"
+DATABASE_URL="postgresql://express:password@123@localhost:9876/express_db?schema=public"
+
+
+# Base Url
+BASE_URL=https://lionsinternationalco.com
+
+# S3 bucket
+WASABI_BUCKET_NAME=radiant-car-washing
+WASABI_ACCESS_KEY=0DDIS64I6Z02OC9QRVLV
+WASABI_SECRET_KEY=sOhXcFKzhWyGOkRPanUzcYXDelWFppjuFhJAzLSc
+WASABI_ENDPOINT=https://s3.eu-central-2.wasabisys.com
+WASABI_REGION=eu-central-2
+
+
+# JWT
+JWT_SECRET="sane"
+JWT_SUPERUSER_MOBILE="0798765432"
+JWT_SUPERUSER_PASSWORD="StrongPassword123"
+JWT_SUPERUSER_NAME="Superuser"
+
