--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,21 @@
-DATABASE_URL="postgresql://express:8ab32e55850daff4da8284c6224ff72a@postgres:5432/express_db"
+DATABASE_URL="postgresql://express:8ab32e55850daff4da8284c6224ff72a@localhost:5432/express_db"
+
+
+# S3 bucket
+WASABI_BUCKET_NAME=radiant-car-washing
+WASABI_ACCESS_KEY=0DDIS64I6Z02OC9QRVLV
+WASABI_SECRET_KEY=sOhXcFKzhWyGOkRPanUzcYXDelWFppjuFhJAzLSc
+WASABI_ENDPOINT=https://s3.eu-central-2.wasabisys.com
+WASABI_REGION=eu-central-2
+
+
+# JWT
+JWT_ACCESS_SECRET="1b8e96fceee306c061335d1c61e1cf87"
+JWT_REFRESH_SECRET="9c2f8a7b5d4e1f6a3b8c2d5e7f1a4b6c"
+JWT_ACCESS_EXPIRES_IN="15m"
+JWT_REFRESH_EXPIRES_IN="7d"
+JWT_SUPERUSER_MOBILE="0798765432"
+JWT_SUPERUSER_PASSWORD="dbb2dbbf3eef994685f3b750a1d08950"
+JWT_SUPERUSER_NAME="Superuser"
+
+OTP_SERVICE_URL="https://www.josms.net/SMSServices/Clients/Prof/RestSingleSMS_General/SendSMS?senderid=RADIANT&accname=radiant&AccPass=vT9cY6mS2dZ4eV8w"
