--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,5 @@ JWT_SUPERUSER_PASSWORD="dbb2dbbf3eef994685f3b750a1d08950"
 JWT_SUPERUSER_NAME="Superuser"
 
 OTP_SERVICE_URL="https://www.josms.net/SMSServices/Clients/Prof/RestSingleSMS_General/SendSMS?senderid=RADIANT&accname=radiant&AccPass=vT9cY6mS2dZ4eV8w"
+
+BASE_URL="https://lionsinternationalco.com"
