--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "cookie-parser": "^1.4.7",
     "csv-parser": "^3.2.0",
     "dotenv": "16.4.7",
     "express": "^5.1.0",
@@ -59,6 +60,7 @@
     "@nestjs/testing": "10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^3.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.2",
     "@types/multer": "^1.4.12",
