--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ WASABI_REGION=eu-central-2
 # JWT
 JWT_ACCESS_SECRET="1b8e96fceee306c061335d1c61e1cf87"
 JWT_REFRESH_SECRET="9c2f8a7b5d4e1f6a3b8c2d5e7f1a4b6c"
-JWT_ACCESS_EXPIRES_IN="15m"
+JWT_ACCESS_EXPIRES_IN="7d"
 JWT_REFRESH_EXPIRES_IN="7d"
 JWT_SUPERUSER_MOBILE="0798765432"
 JWT_SUPERUSER_PASSWORD="dbb2dbbf3eef994685f3b750a1d08950"
